--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "onsenui": "^2.10.8",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-global-var": "^1.0.0",
+    "vue-onsenui": "^2.6.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
