--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "fingerprintjs2": "^2.1.0",
     "onsenui": "^2.10.8",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
