--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pwa-blog-1",
+  "name": "yourneed",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,11 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-global-var": "^1.0.0",
+    "vue-infinite-loading": "^2.4.4",
     "vue-onsenui": "^2.6.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
