--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "vue-infinite-loading": "^2.4.4",
     "vue-onsenui": "^2.6.2",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.15.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
