--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "fingerprintjs2": "^2.1.0",
+    "mobile-device-detect": "^0.2.3",
     "onsenui": "^2.10.8",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
